[package]
name = "rf-distributed-esp"
version = "0.1.0"
edition = "2021"
resolver = "2"
rust-version = "1.71"
readme = "README.md"
license = "Apache-2.0"
description = "esp-compatible implementations for the `rf-distributed` project"
homepage = "https://github.com/lm98/rf-distributed-esp"
documentation = "https://github.com/lm98/rf-distributed-esp"
repository = "https://github.com/lm98/rf-distributed-esp"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = ["std", "embassy", "esp-idf-svc/native"]

pio = ["esp-idf-svc/pio"]
std = ["alloc", "esp-idf-svc/binstart", "esp-idf-svc/std"]
alloc = ["esp-idf-svc/alloc"]
nightly = ["esp-idf-svc/nightly"]
experimental = ["esp-idf-svc/experimental"]
embassy = ["esp-idf-svc/embassy-sync", "esp-idf-svc/critical-section", "esp-idf-svc/embassy-time-driver"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
esp-idf-svc = "0.47.3"
esp-idf-hal = "0.42.5"
rf-distributed = "0.6.0"
async-trait = "0.1.77"
log = "0.4.20"
serde_json = "1.0.111"
serde = { version = "1.0.195", features = ["derive"] }

[build-dependencies]
embuild = "0.31.3"